# WarehouseTracker

./: .gitignore  DEPLOYMENT.md  Project_Overview.md  Project_modules.md  README  README.md  README_DJANGO.md  check_models.py  current_dir.txt  db.sqlite3  dir_output.txt  dj_database_url.py  download_ui.py  main.py  pyproject.toml  query_db_schema.py  render.yaml  requirements-dev.txt  requirements.txt  run_migrations.py  runner.py  status_config.json  test_api.py  test_python.py
.github/workflows/: ci.yml
DOCUMENTATION/CHANGELOGS/: CHANGELOG.md  CHANGELOG_2026_01_30.md
DOCUMENTATION/Markdown/: DEPLOYMENT.md  tests.md
LLM_notes/: LLM_INSTRUCTIONS.md  dev-Notes.md
Warehouseloadingboardui-main/: README.md  index.html  vercel.json  vite.config.ts
Warehouseloadingboardui-main/src/: main.tsx
Warehouseloadingboardui-main/src/app/: App.tsx  shiftUtils.ts  types.ts
config/: settings.py  urls.py
corsheaders/: __init__.py  apps.py  middleware.py
data/: loads.json  test_db.json
scripts/: deploy_backend.ps1  deploy_frontend.ps1  render_build.sh  render_predeploy.sh  start_server.sh  verify_groups.py
src/application/: commands.py  interfaces.py  services.py
src/domain/: exceptions.py  models.py  rules.py
src/infrastructure/: json_repository.py  orm_repository.py
src/warehouse_ui/: apps.py  models.py  urls.py  views.py
src/warehousetracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_render_env_pipeline.py  test_views.py  verification_script.py
whitenoise/: __init__.py  middleware.py
(+21 files in other folders)
