[project]
name = "warehousetracker"
version = "0.1.0"
description = "Warehouse Shipment load manager"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.11",
    "asyncpg>=0.27",
    "black>=23.9",
    "django>=6.0.1",
    "django-cors-headers>=4.0.0",
    "dj-database-url>=1.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "email-validator>=1.3",
    "factory-boy>=3.2",
    "fastapi>=0.95",
    "httpx>=0.24",
    "isort>=5.12",
    "passlib[bcrypt]>=1.7",
    "pre-commit>=2.20",
    "prometheus-client>=0.16",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pytest>=7.2",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.6",
    "ruff<=0.14.14",
    "sentry-sdk>=1.10",
    "sqlalchemy>=2.0",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.22",
]
